// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Pressable passes the snapshot test for basic setup 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNGestureHandlerButton
    collapsable={false}
    exclusive={true}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityLabel="Press me!"
      accessibilityRole="button"
      accessible={true}
      style={Object {}}
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "opacity": 1,
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "display": "flex",
            "opacity": 1,
            "transform": Array [],
          }
        }
      >
        Button press
      </View>
    </View>
  </RNGestureHandlerButton>
</View>
`;

exports[`Atoms/Pressable passes the snapshot test when using style props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNGestureHandlerButton
    collapsable={false}
    exclusive={true}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityLabel="Press me!"
      accessibilityRole="button"
      accessible={true}
      style={Object {}}
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "opacity": 1,
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "backgroundColor": "#6A7BFF",
            "borderColor": "#C5CEE0",
            "borderWidth": 2,
            "display": "flex",
            "opacity": 1,
            "transform": Array [],
          }
        }
      >
        Button press
      </View>
    </View>
  </RNGestureHandlerButton>
</View>
`;
